name:               bolton
version:            0.0.1
license:            BSD3
license-file:       etc/LICENCE.md
author:             Dom De Re
maintainer:         Dom De Re
copyright:          Copyright (C) 2014
synopsis:           Command line app to manage Haskell apps installed from hackage
category:           System
description:        Command line app to manage Haskell apps installed from hackage
homepage:           https://github.com/domdere/bolton/issues
bug-reports:        https://github.com/domdere/bolton/issues
cabal-version:      >= 1.18
build-type:         Custom
--extra-source-files: etc/CONTRIBUTORS,
--                    etc/CREDITS

source-repository       head
    type:               git
    location:           https://github.com/domdere/bolton

flag                    small_base
    description:        Choose the new, split-up base package.

flag                    liquid-tests
    description:        Include verification tests for the Liquid Type Annotations
    default:            False

library
    default-language:   Haskell2010

    build-depends:      base < 5 && >= 4
                    ,   containers
                    ,   array

    ghc-options:        -Wall
                        -fno-warn-unused-imports
                        -fno-warn-unused-binds
                        -fno-warn-unused-do-bind
                        -fno-warn-type-defaults

    hs-source-dirs:     src

    exposed-modules:

executable              bolton
    default-language:   Haskell2010
    -- .hs or .lhs file containing the Main module.
    hs-source-dirs:     main

    main-is:            Main.hs

    ghc-options:        -Wall
                        -fno-warn-unused-imports
                        -fno-warn-unused-binds
                        -fno-warn-unused-do-bind
                        -fno-warn-type-defaults
                        -- -i.:..
                        -optl-Wl,-rpath,$ORIGIN
    --extra-libraries:
    --extra-lib-dirs:
    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- Other library packages from which modules are imported.
    build-depends:      base < 5 && >= 4
                    ,   optparse-applicative        == 0.11.0.1
                    ,   bolton

test-suite              doctests
    type:
                        exitcode-stdio-1.0

    main-is:
                        Main.hs

    default-language:
                        Haskell2010

    build-depends:
                        base                >= 3 && < 5
                    ,   doctest             >= 0.9.11
                    ,   filepath            >= 1.3
                    ,   directory           >= 1.1
                    ,   QuickCheck          >= 2.0
                    ,   template-haskell    == 2.9.*

    ghc-options:
                        -Wall
                        -threaded

    hs-source-dirs:
                        doctests

test-suite              liquid
    if flag(liquid-tests)
        buildable:      True
    else
        buildable:      False

    type:
                        exitcode-stdio-1.0

    main-is:
                        Main.hs

    default-language:
                        Haskell2010

    build-depends:
                        base            < 5 && >= 3
                    ,   filepath        >= 1.3
                    ,   process         == 1.2.*
                    ,   directory       >= 1.1

    ghc-options:
                        -Wall
                        -threaded

    hs-source-dirs:
                        liquid


test-suite              hlint
    default-language:   Haskell2010
    type:               exitcode-stdio-1.0
    main-is:            Main.hs
    hs-source-dirs:     hlint
    build-depends:      base
                    ,   hlint               == 1.8.*

benchmark               benchmarks
    default-language:   Haskell2010
    type:               exitcode-stdio-1.0
    hs-source-dirs:     benchmarks
    main-is:            Main.hs
    ghc-options:        -O2 -rtsopts

    build-depends:      base > 4 && <= 5
                    ,   bolton
                    ,   criterion >= 0.8
